Updated styles the to fix that are broken on last update

--- a/styles.css
+++ b/styles.css
@@ -186,7 +186,7 @@ a {
     color: white;
     font-size: 20px;
     text-decoration: none;
-    padding: 20px;
+    padding: 5px;
     transition: text-shadow 1s;
 }
 
